--- a/politics/rhetorical-advice/misc.html
+++ b/politics/rhetorical-advice/misc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:38 -->
+<!-- 2025-08-27 Wed 22:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Misc advice on rhetoric and arguing ⭐</title>
@@ -218,21 +218,19 @@
 <li><a href="#orgf3eabf4">5. Doing propaganda against an enemy religion</a></li>
 <li><a href="#org1b9c2ad">6. Bullying</a></li>
 <li><a href="#org8e6da55">7. HC (Human Capital/Hot-Crazy) scale for political soldiers</a></li>
-<li><a href="#org63275eb">8. Potency</a></li>
-<li><a href="#orgb1466fb">9. Eggspoze aesthetic</a></li>
-<li><a href="#orgd2c3109">10. Err on the side of action</a>
+<li><a href="#org63275eb">8. Potency</a>
 <ul>
-<li><a href="#orgc3a0a03">10.1. Meta-advice</a></li>
+<li><a href="#orgc3a0a03">8.1. Meta-advice</a></li>
 </ul>
 </li>
-<li><a href="#orge9d32b7">11. Priorities</a></li>
-<li><a href="#org87c9bd9">12. Debate in modern times is never good-faith</a></li>
-<li><a href="#org33ba0f2">13. The correct engagement with US politics</a>
+<li><a href="#orge9d32b7">9. Priorities</a></li>
+<li><a href="#org87c9bd9">10. Debate in modern times is never good-faith</a></li>
+<li><a href="#org33ba0f2">11. The correct engagement with US politics</a>
 <ul>
-<li><a href="#org21021bd">13.1. mudfighting with wignats</a></li>
+<li><a href="#org21021bd">11.1. mudfighting with wignats</a></li>
 </ul>
 </li>
-<li><a href="#org12c19ef">14. Virtue</a></li>
+<li><a href="#org12c19ef">12. Virtue</a></li>
 </ul>
 </div>
 </div>
@@ -499,61 +497,13 @@ BJP posting gobi memes is dumb.
 
 <p>
 &ldquo;Harsh&rdquo; rhetoric must be done by anons (that too with more seriousness) while the adults provide rhetorical/legal cover for it.
-</p>
-
-<p>
-When the king talks, it should be backed by action. Otherwise he deludes his own and looks impotent to enemies.
-</p>
-</div>
-</div>
-<div id="outline-container-orgb1466fb" class="outline-2">
-<h2 id="orgb1466fb"><span class="section-number-2">9.</span> Eggspoze aesthetic</h2>
-<div class="outline-text-2" id="text-9">
-<p>
-<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1913795004650426624">Twitter</a></p>
-</p>
-
-<p>
-RWs need to better-tailor their use of EGGSPOZE aesthetic.
-</p>
-
-<p>
-EGGSPOZE aesthetic is for *news*—to show that you, a formerly neutral party just like the reader, are learning shocking revelations for the first time.
-</p>
-
-<p>
-For everything else, just state it as established knowledge: signals that you know what you&rsquo;re talking about. Using EGGSPOZE aesthetic for what you supposedly always knew signals under-confidence.
-</p>
-</div>
-</div>
-<div id="outline-container-orgd2c3109" class="outline-2">
-<h2 id="orgd2c3109"><span class="section-number-2">10.</span> Err on the side of action</h2>
-<div class="outline-text-2" id="text-10">
-<p>
-<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1902057103445151806">Twitter</a></p>
-</p>
-
-<p>
-Good heuristics for picking sides in intra-RW debates:
-</p>
-<ol class="org-ol">
-<li>action over inaction (both pro-action for govt and for people)</li>
-<li>suggestions over 4D chess/patriots in control cope</li>
-<li>smarts over dumbs</li>
-<li>supporting libs/muslims even a bit: huge🚩</li>
-<li>emotional outbursts: huge🚩</li>
-<li>IRL successful people over incels, NEETs etc (maybe identical to 3 but for emphasis)</li>
-<li>:</li>
-</ol>
-
-<p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1902057651917422780">Twitter</a> by <a href="https://x.com/">@</a></p>
 Also people who are unstable characters swinging wildly from one issue to another reacting against irrelevant trends and groups are a massive liability.
 </p>
 </div>
 <div id="outline-container-orgc3a0a03" class="outline-3">
-<h3 id="orgc3a0a03"><span class="section-number-3">10.1.</span> Meta-advice</h3>
-<div class="outline-text-3" id="text-10-1">
+<h3 id="orgc3a0a03"><span class="section-number-3">8.1.</span> Meta-advice</h3>
+<div class="outline-text-3" id="text-8-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1926113645357867217">Twitter</a></p>
 </p>
@@ -577,8 +527,8 @@ Must do opposite.
 </div>
 </div>
 <div id="outline-container-orge9d32b7" class="outline-2">
-<h2 id="orge9d32b7"><span class="section-number-2">11.</span> Priorities</h2>
-<div class="outline-text-2" id="text-11">
+<h2 id="orge9d32b7"><span class="section-number-2">9.</span> Priorities</h2>
+<div class="outline-text-2" id="text-9">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1911986085301027045">Twitter</a></p>
 </p>
@@ -595,8 +545,8 @@ The most important points to hammer in to the in-group  right now are:
 </div>
 </div>
 <div id="outline-container-org87c9bd9" class="outline-2">
-<h2 id="org87c9bd9"><span class="section-number-2">12.</span> Debate in modern times is never good-faith</h2>
-<div class="outline-text-2" id="text-12">
+<h2 id="org87c9bd9"><span class="section-number-2">10.</span> Debate in modern times is never good-faith</h2>
+<div class="outline-text-2" id="text-10">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1951490445537861904">Twitter</a></p>
 </p>
@@ -641,8 +591,8 @@ In antiquity, this guy would be challenging all proponents of his rival ideology
 </div>
 </div>
 <div id="outline-container-org33ba0f2" class="outline-2">
-<h2 id="org33ba0f2"><span class="section-number-2">13.</span> The correct engagement with US politics</h2>
-<div class="outline-text-2" id="text-13">
+<h2 id="org33ba0f2"><span class="section-number-2">11.</span> The correct engagement with US politics</h2>
+<div class="outline-text-2" id="text-11">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1871171995401867276">Twitter</a></p>
 </p>
@@ -680,8 +630,8 @@ Most Indian RWs do the exact opposite:
 </ul>
 </div>
 <div id="outline-container-org21021bd" class="outline-3">
-<h3 id="org21021bd"><span class="section-number-3">13.1.</span> mudfighting with wignats</h3>
-<div class="outline-text-3" id="text-13-1">
+<h3 id="org21021bd"><span class="section-number-3">11.1.</span> mudfighting with wignats</h3>
+<div class="outline-text-3" id="text-11-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1938732060874809416">Twitter</a></p>
 </p>
@@ -703,8 +653,8 @@ rather than seething at mainstream MAGA/whites themselves.
 </div>
 </div>
 <div id="outline-container-org12c19ef" class="outline-2">
-<h2 id="org12c19ef"><span class="section-number-2">14.</span> Virtue</h2>
-<div class="outline-text-2" id="text-14">
+<h2 id="org12c19ef"><span class="section-number-2">12.</span> Virtue</h2>
+<div class="outline-text-2" id="text-12">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1951831997506277506">Twitter</a></p>
 </p>
@@ -721,7 +671,7 @@ What is necessary is a calculated willingness to sacrifice virtues for a greater
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:38</p>
+<p class="date">Created: 2025-08-27 Wed 22:24</p>
 </div>
 </body>
 </html>
