--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-27 Wed 22:24 -->
+<!-- 2025-09-06 Sat 15:10 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</title>
@@ -242,6 +242,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 </ul></li>
 <li>hinduism
 <ul class="org-ul">
+<li><a href="history/hinduism/caste.html">Caste</a></li>
 <li><a href="history/hinduism/theology.html">Early Vedic society and theological developments 🏗️</a></li>
 <li><a href="history/hinduism/restraint.html">Indriyajaya, environmentalism, the trad fallacy and adapting Hinduism for modernity</a></li>
 <li><a href="history/hinduism/tolerance.html">Is Hinduism tolerant? Is it Nihilistic?</a></li>
@@ -277,6 +278,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <li><a href="politics/agency/rl.html">Reinforcement is female-coded; Supervision is male-coded</a></li>
 <li><a href="politics/agency/things_are_hard_pill.html">Reject blackpill/whitepill. Embrace things-are-hard-pill</a></li>
 <li><a href="politics/agency/kayfabe.html">The world of words and the world of things</a></li>
+<li><a href="politics/agency/wiki.html">Wiki</a></li>
 <li><a href="politics/agency/value.html">You must provide value to get what you want  ⭐</a></li>
 </ul></li>
 <li>leli-ideology
@@ -340,6 +342,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <li><a href="politics/rhetorical-advice/third-rails.html">Baiting enemies to the third rail ⭐</a></li>
 <li><a href="politics/rhetorical-advice/positive-vision.html">Importance of a positive vision, and knowing WHY you believe what you believe ⭐</a></li>
 <li><a href="politics/rhetorical-advice/misc.html">Misc advice on rhetoric and arguing ⭐</a></li>
+<li><a href="politics/rhetorical-advice/upaya.html">Salesman mentality vs Haka dancer mentality (aka &ldquo;There is no fifth upāya&rdquo;) ⭐</a></li>
 <li><a href="politics/rhetorical-advice/talk.html">Talk! All publicity is good publicity</a></li>
 <li><a href="politics/rhetorical-advice/persuasion.html">To make people Right-wing, reflect on what made you Right-wing ⭐</a></li>
 <li><a href="politics/rhetorical-advice/neutrality.html">Toss out facts without explicit emotional judgement ⭐</a></li>
@@ -385,6 +388,15 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <ul class="org-ul">
 <li><a href="https://theemissary.co/">The Emissary</a></li>
 </ul></li>
+<li>Data-driven midtwittery resources
+<ul class="org-ul">
+<li><a href="https://ourworldindata.org/">ourworldindata.org</a></li>
+<li><a href="https://d-place.org/parameters/EA071#1/30/152">d-place.org</a>, for maps like &ldquo;historical cultures that practised slavery&rdquo;</li>
+<li><a href="https://www.gapminder.org/dollar-street">Gapminder dollar street</a>, to get a picture of &ldquo;what does someone in this country with this income look like?&rdquo;</li>
+<li><a href="http://gadm.org/">gadm.org</a>, GeoJSONs for world administrative regions</li>
+<li><a href="https://wiki.openstreetmap.org/wiki/Overpass_API">Overpass API</a>, geographical data for other things like rivers</li>
+<li><a href="https://gretil.sub.uni-goettingen.de/gretil.html">GRETIL</a>, database of Indian literary primary sources</li>
+</ul></li>
 </ul>
 </div>
 </div>
@@ -404,7 +416,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-27 Wed 22:24</p>
+<p class="date">Created: 2025-09-06 Sat 15:10</p>
 </div>
 </body>
 </html>
