--- a/other-people/history.html
+++ b/other-people/history.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-09-06 Sat 15:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Snippetjeetry</title>
@@ -223,6 +223,7 @@
 <li><a href="#org36bf1ca">4. Param Caitanya</a>
 <ul>
 <li><a href="#orgace2e65">4.1. buddha studied ramayana</a></li>
+<li><a href="#org33d32dc">4.2. various theological sects</a></li>
 </ul>
 </li>
 <li><a href="#org66dd46c">5. aayush singh</a></li>
@@ -420,12 +421,33 @@ Maitreyasamitināṭaka composed by the Vaibhāṣikya Āryacandra.
 </p>
 </div>
 </div>
+<div id="outline-container-org33d32dc" class="outline-3">
+<h3 id="org33d32dc"><span class="section-number-3">4.2.</span> various theological sects</h3>
+<div class="outline-text-3" id="text-4-2">
+<p>
+<p class="byline">Published on <a href="https://x.com/Param_Chaitanya/status/1705414333851992112">Twitter</a> by <a href="https://x.com/Param_Chaitanya">@Param_Chaitanya</a></p>
+Tripitakas very well known who Krishna and Balarama are
+</p>
+
+<p>
+Cullaniddesa of Khuddakanikaya mentions the worship of different deities along with Krishna &amp; Balarama, this description contradicts with Ghata-jataka
+</p>
+
+<p>
+It also mentions the worship of Jaina deities Manibhadra, Purnabhadra
+</p>
+
+<p>
+<img src="/img/snippetry/sects.jpeg" alt="sects.jpeg" />
+</p>
+</div>
+</div>
 </div>
 <div id="outline-container-org66dd46c" class="outline-2">
 <h2 id="org66dd46c"><span class="section-number-2">5.</span> aayush singh</h2>
 <div class="outline-text-2" id="text-5">
 <p>
-<p class="byline">Published on <a href="https://x.com/aayush_sin60488/status/1829724831845097681aayush_sin60488">Twitter</a> by <a href="https://x.com/">@</a></p>
+<p class="byline">Published on <a href="https://x.com/aayush_sin60488/status/1829724831845097681">Twitter</a> by <a href="https://x.com/aayush_sin60488">@aayush_sin60488</a></p>
 Extremely rare issue of a King named Vikrama from Ujjain city state, 1st century BCE.
 </p>
 
@@ -1606,7 +1628,7 @@ Followed by this passage..
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-09-06 Sat 15:05</p>
 </div>
 </body>
 </html>
