--- a/politics/policy.html
+++ b/politics/policy.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:28 -->
+<!-- 2025-09-06 Sat 15:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Private military corporations, the Order of Glorious Motherhood and other policies I wish for</title>
@@ -217,6 +217,9 @@
 <ul>
 <li><a href="#orgb6525fc">3.1. Order of Glorious Motherhood</a></li>
 <li><a href="#org0fb575b">3.2. urban infra/FSI</a></li>
+<li><a href="#orgee3bdad">3.3. solutions</a></li>
+<li><a href="#orgd2b8d4f">3.4. tax rebates</a></li>
+<li><a href="#orge8122ce">3.5. why</a></li>
 </ul>
 </li>
 <li><a href="#orgdf9a2f1">4. Low-hanging fruits in education</a>
@@ -367,6 +370,64 @@ This guy is annoying, but one reason to prioritize urban infrastructure/FSI dere
 <p>
 <a href="/xeet/politics/advice/rl.html">xeet/politics/advice/rl.org</a>
 </p>
+</div>
+</div>
+<div id="outline-container-orgee3bdad" class="outline-3">
+<h3 id="orgee3bdad"><span class="section-number-3">3.3.</span> solutions</h3>
+<div class="outline-text-3" id="text-3-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1961137761710473304">Twitter</a></p>
+That&rsquo;s not true. All of these work:
+</p>
+<ul class="org-ul">
+<li>Large financial incentives,e.g. tying pensions to a fraction of your children&rsquo;s incomes, or massive tax incentives</li>
+<li>Israeli siege mentality</li>
+<li>Mongolian propaganda</li>
+<li>Banning contraception for people above age 25 with fewer than 2 kids, or who have 2 or 3 kids but have not had a kid in the past 3 years, unless it&rsquo;s a woman who can present a doctor&rsquo;s certificate confirming she cannot get pregnant</li>
+<li>at least stopping and fighting <b>anti-</b> natalist propaganda</li>
+</ul>
+
+<p>
+Problem is both the left and the right use TFR to push their priorities (retarded social democratic policies on the left, religion on the right), and when that fails people say &ldquo;welp, looks like nothing can be done about TFR&rdquo;
+</p>
+</div>
+</div>
+<div id="outline-container-orgd2b8d4f" class="outline-3">
+<h3 id="orgd2b8d4f"><span class="section-number-3">3.4.</span> tax rebates</h3>
+<div class="outline-text-3" id="text-3-4">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1805252517627826564">Twitter</a></p>
+Fertility-based income tax rebates would actually work wonders in India because it would incentivize precisely the people we want reproducing more.
+</p>
+
+<p>
+40+, 0 kids: 75% marginal rate
+35+, 0 kids: 60%
+30+, 0 kids: 45%
+</p>
+
+<p>
+2 kids: 35%
+3 kids: 27.5%
+4 kids: 20%
+5 kids: 12.5%
+++: 0%
+</p>
+</div>
+</div>
+<div id="outline-container-orge8122ce" class="outline-3">
+<h3 id="orge8122ce"><span class="section-number-3">3.5.</span> why</h3>
+<div class="outline-text-3" id="text-3-5">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1961141351883665549">Twitter</a></p>
+</p>
+<ol class="org-ol">
+<li>To prevent Islamization of India</li>
+<li>Modern economy is bottlenecked by talent, not natural resources; more population = more high-tail</li>
+<li>Ageing population is a fiscal disaster</li>
+<li>India&rsquo;s pop dens is lower than e.g. England, Korea</li>
+<li>Expanding our tribe is good, and a religious obligation</li>
+</ol>
 </div>
 </div>
 </div>
@@ -587,7 +648,7 @@ You wake up every day to post-rain clarity and deciduous trees covered in dew.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:28</p>
+<p class="date">Created: 2025-09-06 Sat 15:06</p>
 </div>
 </body>
 </html>
